# grpc-helloworld-rs

./: Cargo.toml
.postman/: api  api_51a45f4e-2e48-40dd-9e2d-d23ee90b4a9c  api_689edaa1-cebc-4e59-99f3-3a29dee5ab21  api_90b916fb-d5cb-462a-b1e7-b816ca54c56b  api_de66f0f4-bc0d-41c8-b181-17de1b84afc4
proto/: helloworld.proto  messages.proto
src/: client.rs  server.rs
